fix: 프로필 사진 기능 제거
