# models/User.js
@@ -5,7 +5,6 @@ const mongoose = require("mongoose");
 const userSchema = new mongoose.Schema({
   email: { type: String, unique: true },
   nickname: { type: String },
-  profileImage: { type: String },
   score: { type: Number },
   point: { type: Number },
 });
